MDL-54687 messages: Fix height bug with auto-rows textarea
Firefox reserves height for the horizontal scroll bars in a textarea. This
mucks up the height calculations for this element. Prevent it with overflow-x.

--- a/theme/bootstrapbase/style/moodle.css
+++ b/theme/bootstrapbase/style/moodle.css
@@ -14168,6 +14168,9 @@ input[size] {
   padding: 0.5em;
   font-size: large;
 }
+textarea[data-auto-rows] {
+  overflow-x: hidden;
+}
 body.modal-open {
   overflow: hidden;
 }
